--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ logging.level.org.hibernate.SQL = DEBUG
 spring.datasource.initialization-mode = always
 
 ## JSP View Properties
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/WEB-INF/jsp
 spring.mvc.view.suffix=.jsp
 
 spring.mvc.static-path-pattern=/resources/**
