--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,5 @@ spring.security.oauth2.client.registration.google.client-secret=tdjx24DmkviDyHQP
 
 spring.security.oauth2.client.registration.kakao.client-id=2c1bb322a2e8f77495a2ab7d2f8d73d9
 spring.security.oauth2.client.registration.kakao.client-secret=FQ5H7zOEQfQeTL77fMuUA9PNxOWvxVfw
+
+spring.freemarker.check-template-location=false
