--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8080
 
 ## Spring DATASOURCE
-spring.datasource.url = jdbc:mysql://buysell-db.cnl7zdheyzgn.ap-northeast-2.rds.amazonaws.com:3306/BuySell?userSSL=false&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://buysell-db.cnl7zdheyzgn.ap-northeast-2.rds.amazonaws.com:3306/BuySell?userSSL=false&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username = buysell
 spring.datasource.password = buysell0209
