--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,22 @@ cache:
 
 script: "./gradlew clean build -x test"
 
+before_deploy:
+  - zip -r buysell-aws *
+  - mkdir -p deploy
+  - mv buysell-aws.zip deploy/buysell-aws.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: buysell-s3
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
 notifications:
   email:
     recipients:
