--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,16 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: buysell-s3
+    key: buysell-aws.zip
+    bundle_type: zip
+    application: BuySell-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
 notifications:
   email:
     recipients:
