--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,13 @@ cache:
 script: "./gradlew clean build -x test"
 
 before_deploy:
-  - zip -r buysell-aws *
-  - mkdir -p deploy
-  - mv buysell-aws.zip deploy/buysell-aws.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.war before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/buysell-aws.zip
 
 deploy:
   - provider: s3
